@@ -12,7 +12,7 @@ Closes: #471191
  1 file changed, 6 insertions(+)
 
 diff --git a/src/applet.c b/src/applet.c
-index 636898c..fa3e448 100644
+index 08be772..06fc585 100644
 --- a/src/applet.c
 +++ b/src/applet.c
 @@ -2611,6 +2611,12 @@ applet_update_icon (gpointer user_data)
